language/move-lang/tests/move_check/translated_ir_tests/commands/abort_negative_stack_size.move
// check: NEGATIVE_STACK_SIZE_WITHIN_BLOCK

fun main() {
    abort
}
